# django-admin-duplicate

./: README.md  setup.cfg
admin-duplicate/: models.py
