[metadata]
name = django-admin-duplicate
version = 1.0.0
description = django-attachments is generic Django application to attach Files (Attachments) to any model.
long_description = file: README.rst, CHANGELOG.rst
author = Joan Marc Soler
author_email = jmsoler7@gmail.com
url = https://github.com/jmsoler7/django-admin-duplicate
keywords = django, admin, duplicate
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=2.2

# [isort]
# known_first_party = attachments
# default_section = THIRDPARTY
# sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# multi_line_output = 0
# skip = migrations

# [coverage:run]
# source = attachments
# branch = True
# omit =
#     attachments/migrations/*
#     attachments/tests/*

# [coverage:report]
# exclude_lines =
#     pragma: no cover
#     def __repr__

# [coverage:html]
# directory = /tmp/coverage_report/attachments
